--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-    <title>portfolio</title>
+    <title>Projects</title>
     <link rel="icon" href="https://raw.githubusercontent.com/someonexunknown/portfolio.github.io/refs/heads/main/ascas.png" >
     <link rel="stylesheet" href="1.css">
 
